k8s/kustomize/app/base/transformer-labels.yaml
apiVersion: builtin
kind: LabelTransformer
metadata:
  name: transformer-argocd-application-labels
labels:
  app: codex
fieldSpecs:
- path: metadata/labels
  create: true
- kind: Deployment
  path: spec/template/metadata/labels
  create: true
