k8s/kustomize/app/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: codex
spec:
  ports:
  - name: app-http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: codex
