k8s/kustomize/app/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: codex
spec:
  port:
    targetPort: app-http
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: codex
    weight: 100
